// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/List List 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <ul
      class="List-sc-1ueqoqt-0 eukwuA"
      color="currentColor"
    >
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/List With compact spacing 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <ul
      class="List-sc-1ueqoqt-0 biKpmQ"
      color="currentColor"
    >
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/List With custom colour 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <ul
      class="List-sc-1ueqoqt-0 kyYzus"
      color="red"
    >
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/List With custom font size and line height 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <ul
      class="List-sc-1ueqoqt-0 ergiSe"
      color="currentColor"
      font-size="small"
    >
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-sc-3wr72f-0 yoRiW"
        color="currentColor"
        font-size="large"
      >
        Larger List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/List With left alignment 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <ul
      class="List-sc-1ueqoqt-0 hyIhlb"
      color="currentColor"
    >
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-sc-3wr72f-0 fgjjlO"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;
